20160214
- Ribbon Generator: add Imprimerie Nationale point system.

20151102
- Ribbon Generator: fix some layout issues when using multiple columns.

20150429
- Ribbon Generator: add fractional set widths between 5 and 6.

20150212
- Ribbon Generator: only attempt to use unit shift when it's enabled and
    in a row we can shift with.

20141220
- MCA Editor: made available mats popup resizeable and a little more legible.

20141214
- MCA Editor: added confirmation when deleting MCA.
- MCA Editor: added MCA rename feature.

20141211
- Punch: fix a communication problem that prevented punching.
- MCA Editor: rework MCA errors display a bit.

20141025
- General: handle wide characters (unicode) more reliably.
- Font generator: fix a few bugs that prevented reliable operation.

20140827
- Ribbon Generator: added ability to generate multiple "copies" of a font
   when generating a font ribbon.
- Ribbon Generator: added "clean matrices" option that will cast 2 of each
   sort in a font.

20140821
- Ribbon Generator: added MCA sync utility that can sync MCAs between
   the standalone and cloud ribbon generators. (beta)

20140820
- Font Schemes: support for casting kerning pairs together for support.
- MCA Editor: added ability to download all MCAs in a ZIP file.
- MCA Editor: added ability to import a ZIP file with MCAs.

20140623
- Ribbon Generator: Support for generating standardized font schemes.
- Ribbon Generator: Support for generating font ribbons using font schemes.

20140529
- Punch: try not to block when connecting to a non-responsive interface.
- Punch: detect write errors when communicating with the interface.

20140527
- Ribbon Generator: Nicer layout of ribbon settings page.
- Ribbon Generator: Include some job information on soft proof page.

20140506
- Ribbon Generator: Support the pneumatic low space mechanism.
- Ribbon Generator: Support specifying a maximum space size when 
    quadding (but which is not used when adding a fixed amount of