@@ -1,7 +1,7 @@
 punchVersion = 1.0.4
 casterControlVersion = 2.0.1
-ribbonGeneratorVersion = 2.7.2
-typesettingEngineVersion = 2.5.2
-copyrightYear = 2005 - 2015
+ribbonGeneratorVersion = 2.7.5
+typesettingEngineVersion = 2.6
+copyrightYear = 2005 - 2016
 copyrightName = Bill Welliver <bill@welliver.org>
 releaseType = Release
